--- a/.github/workflows/pullRequest.yml
+++ b/.github/workflows/pullRequest.yml
@@ -2,7 +2,7 @@ name: Bare Minimum Requirements
 
 on: [push, pull_request]
 
-jobs:
+job:
   test:
     runs-on: ubuntu-latest
     steps:
@@ -10,6 +10,6 @@ jobs:
       - name: Bare Minimum Requirements
         uses: actions/setup-node@v1
         with:
-          node-version: '16'
+          node-version: "16"
       - run: npm install
       - run: npm test
