--- a/.github/workflows/pullRequest.yml
+++ b/.github/workflows/pullRequest.yml
@@ -3,13 +3,16 @@ name: Bare Minimum Requirements
 on: [push, pull_request]
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Bare Minimum Requirements
-        uses: actions/setup-node@v1
-        with:
-          node-version: "16"
-      - run: npm install
-      - run: npm test
+  job1:
+    test:
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v2
+        - name: Bare Minimum Requirements
+          uses: actions/setup-node@v1
+          with:
+            node-version: "16"
+        - run: npm install
+        - run: npm test
+  job2:
+    needs: job1
